[project]
name = "pytorch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Meltpoint", email = "suzuki-yusuke160@g.ecc.u-tokyo.ac.jp" }
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "mypy>=1.5.1",
    "ruff>=0.0.292",
]

[tool.hatch.metadata]
allow-direct-references = true
[tool.black]
# 最大文字数 指定文字数を超えたら改行
line_length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []
line-length = 88

[tool.ruff.per-file-ignores]
# 個別設定
# __init__.pyは未使用インポートを許容
"__init__.py" = ["F401"]
